--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".Signup"
     android:orientation="vertical"
     android:background="@drawable/facebbok">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -52,8 +51,22 @@
             android:id="@+id/ed2"
             android:gravity="center"
             android:textColor="@color/black"
-            android:hint="password"
             android:textColorHint="@color/black"
+            android:hint="password"
+            android:inputType="textPassword"
+            android:background="@drawable/round"
+            android:backgroundTint="@color/white"
+            android:padding="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="34dp" />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/ed3"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
+            android:hint=" confirm password"
             android:inputType="textPassword"
             android:background="@drawable/round"
             android:backgroundTint="@color/white"
@@ -63,7 +76,7 @@
         <androidx.appcompat.widget.AppCompatButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="login"
+            android:text="Signup"
             android:gravity="center"
             android:padding="10dp"
             android:id="@+id/btn"
@@ -72,18 +85,7 @@
             android:background="@drawable/btround"
             android:layout_marginTop="20dp"
             />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="forgot password?"
-            android:textColor="@color/white"
-            android:textSize="17dp"
-            android:padding="20dp"
-            android:layout_marginTop="10dp"
-            android:id="@+id/text2"
-            android:gravity="right"
-            android:layout_marginRight="10dp"
-            />
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -97,7 +99,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
-            android:text="Signup for facebook"
+            android:text="Login for facebook"
             android:textColor="@color/white"
             android:textSize="18dp"
             android:padding="10dp"
