--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -96,17 +96,17 @@
 
 
         <TextView
+            android:id="@+id/txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
+            android:layout_marginRight="10dp"
+            android:gravity="center"
+            android:padding="10dp"
             android:text="Login for facebook"
             android:textColor="@color/white"
-            android:textSize="18dp"
-            android:padding="10dp"
-            android:id="@+id/text3"
-            android:gravity="center"
-            android:layout_marginRight="10dp"
-            />
+            android:textSize="18dp" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
